# CES

./: README.md  package-lock.json  package.json
.github/: FUNDING.yml
database/: schema.sql
db/: finance_schema.sql  schema.sql
docs/: blueprint.md
prisma/: schema.prisma
src/: README.md
src/ai/: dev.ts
src/ai/flows/: content-generation-flow.ts  sparrow-flow.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/achievement-leaderboard/: page.tsx
src/app/achievements/: page.tsx
src/app/admin/: page.tsx
src/app/contact/: page.tsx
src/app/courses/: page.tsx
src/app/courses/[subjectSlug]/: layout.tsx  page.tsx
src/app/events/: events-calendar-client.tsx  page.tsx
src/app/forums/: page.tsx
src/app/forums/[categorySlug]/: page.tsx
src/app/jobs/: page.tsx
src/app/membership/: page.tsx
src/app/payment-confirmation/: page.tsx
src/app/professor-dashboard/: page.tsx
src/app/profile/: page.tsx
src/app/project-showcase/: page.tsx
src/app/sub-orgs/: page.tsx
src/app/sub-orgs/[slug]/: page.tsx
src/backend/cpp/: README.md
src/backend/cpp/hardware-service/: CMakeLists.txt  hardware_interface.cpp  hardware_interface.h  main.cpp
src/backend/cpp/hpc-service/: CMakeLists.txt  main.cpp  simulation.cpp  simulation.h
src/backend/java/: README.md
src/backend/python/: README.md
src/components/: accessibility-tools.tsx  app-header.tsx  app-sidebar.tsx  back-button.tsx  profile-sidebar-content.tsx  sparrow-companion.tsx  theme-toggle.tsx
src/components/admin/: admin-achievements-management.tsx  admin-analytics.tsx  admin-events-management.tsx  admin-finance-management.tsx  admin-membership-management.tsx  admin-news-management.tsx  admin-suborg-management.tsx  admin-user-management.tsx
src/components/courses/: index-card-qr-generator.tsx
src/components/professor/: professor-activities-management.tsx  professor-announcements-management.tsx  professor-index-management.tsx
src/components/ui/: sheet.tsx  sidebar.tsx
src/database/: finance.sql
src/db/: schema.sql
src/lib/: database.sql  prisma.ts
src/lib/mock-data/: forums.ts
src/services/: gcash.ts
src/types/: forum.ts
(+22 files in other folders)
